crates/rome_formatter/tests/specs/prettier/js/exports/test.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: test.js

---
# Input
```js
export { value1, value2 as value2_renamed, value3, value4 as value4_renamed, value5 } from "exports";

export a,{b} from "./baz";

export * as ns from "mod";

export * as foo,{bar} from "./baz";

export { undefinedExport };

```

# Output
```js
export {
  value1,
  value2 as value2_renamed,
  value3,
  value4 as value4_renamed,
  value5,
} from "exports";

export
a, { b };
from;
"./baz";

export * as ns from "mod";

export * as foo
,
{
  bar;
}
from;
"./baz";

export { undefinedExport };

```

# Errors
```
error[SyntaxError]: expected a class, a function, or a variable declaration but instead found 'a'
  ┌─ test.js:3:8
  │
3 │ export a,{b} from "./baz";
  │        ^ Expected a class, a function, or a variable declaration here

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ test.js:3:14
  │
3 │ export a,{b} from "./baz";
  │        ------^^^^
  │        │     │
  │        │     An explicit or implicit semicolon is expected here...
  │        ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ test.js:3:19
  │
3 │ export a,{b} from "./baz";
  │              -----^^^^^^^
  │              │    │
  │              │    An explicit or implicit semicolon is expected here...
  │              ...Which is required to end this statement

error[SyntaxError]: expected `from` but instead found `,`
  ┌─ test.js:7:16
  │
7 │ export * as foo,{bar} from "./baz";
  │                ^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ test.js:7:28
  │
7 │ export * as foo,{bar} from "./baz";
  │                       -----^^^^^^^
  │                       │    │
  │                       │    An explicit or implicit semicolon is expected here...
  │                       ...Which is required to end this statement


```


